[tool.poetry]
name = "ks-sql"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ks_sql"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
